--- a/css/index.css
+++ b/css/index.css
@@ -38,6 +38,12 @@ html{
     scroll-behavior: smooth;
     color:var(--light-color);
     transition: font-size 0s;
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    overflow-x: hidden;
 }
 
 section{
@@ -91,7 +97,7 @@ section:nth-child(even){
 /* HEADER */
 .header{
     position: fixed;
-    top:0; left: 0; right:0;
+    top:0; left: 0; right: 0;
     background: rgb(233, 233, 233);
     padding: .7rem 7%;
     display: flex;
@@ -103,7 +109,7 @@ section:nth-child(even){
 
 .header__logo{
     color:var(--black);
-    font-size: 2.5rem;
+    font-size: 2.3rem;
     font-weight: bolder;
     display: flex;
     align-items: center;
@@ -125,8 +131,8 @@ section:nth-child(even){
 .header__nav a{
     font-size: 1.7rem;
     border-radius: .5rem;
-    margin: .3em;
-    padding:.8rem 1.5rem;
+    margin: .2em;
+    padding: .9rem 1.1rem;
     color:var(--light-color);
 }
 
@@ -281,6 +287,10 @@ section:nth-child(even){
 
 
 /* REVIEWS */
+.main__reviews {
+    padding: 0;
+}
+
 .main__reviews__container {
     position: relative;
     width: 100%;
@@ -305,7 +315,7 @@ section:nth-child(even){
     box-shadow: 0 15px 50px rgba(0, 0, 0, .2);
     border-radius: 10px;
     background: rgb(233, 233, 233);
-    filter: blur(3px);
+    filter: blur(4px);
 }
 
 .swiper-slide-active {
@@ -380,6 +390,10 @@ section:nth-child(even){
 
 
 /* MENU */
+.main__menu {
+    padding-top: 100px;
+}
+
 .main__menu__buttons {
     display: flex;
     justify-content: center;
@@ -546,9 +560,9 @@ section:nth-child(even){
 .main__team__cards__card {
     position: relative;
     width: 300px;
-    height: 300px;
-    margin: 20px;
-    box-shadow: 20px 20px 30px rgba(0, 0, 0, .5);
+    height: 400px;
+    margin: 50px 25px;
+    box-shadow: 15px 15px 10px rgba(0, 0, 0, .5);
     border-radius: 15px;
     background: rgba(194, 132, 0, 0.8);
     overflow: hidden;
@@ -707,28 +721,35 @@ background: var(--red);
 
 /* FOOTER */
 .footer {
-    background: #fff4f4;
+    background: #fff8d6;
+    padding-top: 1px;
 }
 
 .footer .box-container{
     display: flex;
     justify-content: space-around;
+    align-items: left;
     gap: 1.5rem;
-    margin-bottom: 25px;
+    margin-top: 25px;
+    margin-bottom: 50px;
+}
+
+.footer .box-container .box {
+    margin: 10px 0;
 }
 
 .footer .box-container .box h3{
-    padding:.5rem 0;
-    font-size: 2.5rem;
+    padding: 0 0 .8em 0;
+    font-size: 2.7rem;
     color:var(--black);
 }
 
 .footer .box-container .box a{
     display: block;
-    padding:.5rem 0;
-    font-size: 1.5rem;
+    padding: 0 0 .8em 0;
+    font-size: 1.6rem;
     font-weight: bold;
-    color:var(--light-color);
+    color: var(--light-color);
 }
 
 .footer .box-container .box a:hover{
@@ -852,8 +873,7 @@ background: var(--red);
 
 /* MEDIA QUERIES  */
 
-@media (max-width:991px){
-
+@media (max-width:63em){
     html{
         font-size: 55%;
     }
@@ -861,14 +881,13 @@ background: var(--red);
     header{
         padding:1rem 2rem;
     }
-
+    
     section{
         padding:2rem;
     }
 }
 
-@media (max-width:768px){
-
+@media (max-width:60em){
     #menu-bars{
         display: inline-block;
     }
@@ -900,8 +919,13 @@ background: var(--red);
     }
 }
 
-@media (max-width:450px){
+@media (max-width: 35em){
+    .footer .box-container{
+        flex-direction: column;
+    }
+}
 
+@media (max-width: 28em){
     html{
         font-size: 50%;
     }
