--- a/css/index.css
+++ b/css/index.css
@@ -257,8 +257,11 @@ section:nth-child(even){
     border-radius: 35px;
 }
 
-.main__about .image img:hover{ 
+.main__about .image:hover{ 
     transform: scale(1.05);
+}
+
+.main__about .image img:hover{ 
     border-radius: 50%;
 }
 
@@ -300,10 +303,6 @@ section:nth-child(even){
     user-select: none;
 }
 
-.main__about .icons-container .icons:hover{
-    transform: scale(1.05);
-}
-
 .main__about .icons-container .icons i{
     font-size: 2.5rem;
     color:var(--red);
@@ -341,13 +340,14 @@ section:nth-child(even){
 }
 
 .swiper-slide {
+    margin: 1%;
     background-position: center;
     background-size: cover;
     width: 320px;
-    box-shadow: 0 15px 50px rgba(0, 0, 0, .2);
+    box-shadow: 0 15px 50px rgba(0, 0, 0, .3);
     border-radius: 15px;
     background: rgb(233, 233, 233);
-    filter: blur(4px);
+    filter: blur(3px);
 }
 
 .swiper-slide-active {
@@ -375,6 +375,7 @@ section:nth-child(even){
 .testimonialBox .content p {
     font-size: 2em;
     height: 200px;
+    overflow: hidden;
 }
 
 .testimonialBox .details {
@@ -598,8 +599,8 @@ section:nth-child(even){
 }
 .main__team__cards__card {
     position: relative;
-    width: 300px;
-    height: 400px;
+    width: 250px;
+    height: 350px;
     margin: 50px 25px;
     box-shadow: 15px 15px 10px rgba(0, 0, 0, .5);
     border-radius: 15px;
@@ -964,6 +965,18 @@ background: var(--red);
 }
 
 @media (max-width: 35em){
+    .testimonialBox .content p {
+        font-size: 2em;
+        height: 150px;
+    }
+
+    .main__team__cards__card {
+        position: relative;
+        width: 200px;
+        height: 300px;
+        margin: 33px 25px;
+    }
+
     .footer .box-container{
         flex-direction: column;
     }
